--- a/index.html
+++ b/index.html
@@ -4,35 +4,41 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> <!--Esta linea y la de abajo son copia y pega de google fonts para descargar la tipologia de letra que queremos-->
-    <link href="https://fonts.googleapis.com/css2?family=Overpass+Mono:wght@300..700&display=swap" rel="stylesheet"> <!--Linea copiada y pegada de google fonts. Despues de añadir este codigo, hay que añadir el nombre de la font en el css sino no funciona-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <!--Estas dos lineas de abajo son copia y pega de google fonts para descargar la tipologia de letra que queremos-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Inspiration&family=Overpass+Mono:wght@300..700&family=Syne+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css"/>
     <title>Document</title>
 </head>
 
 <body>
     <!--Bloque de inicio-->
-    <div>
-        <h2>Pau Durà</h2>
-        <h3>#Programmer</h3>
-        <h3>#Work Force Manager</h3>
+    <div id="sobremi">
+        <h1><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span></h1>
+        <h3 class="hastag">#Programmer</h3>
+        <h3 class="hastag">#Work Force Manager</h3>
+        <h3 class="hastag">#Business Administration</h3>s
+        <h3 class="hastag">#Human Resources Psicology</h3>
     </div>
 
     <!--Bloque Sobre mi-->
     <div>
         <h2>Mi primer porftolio</h2>
-        <img src="/images/profile.png" alt="imagen de perfil" height="250">
-        <p>Hey there! 👋 I’m a <strong>Multi-Platform Application Developer</strong> with a strong passion for
+        <img src="/images/profile.png" alt="imagen de perfil" height="200">
+        <p> <span class="codigo">&lt;p&gt;</span> Hey there! 👋 I’m a <strong>Multi-Platform Application Developer</strong> with a strong passion for
             transforming raw data into meaningful insights. I believe that data is the foundation of smart
             decision-making, and I love building tools that help businesses analyze and understand their information to
-            make better choices.</p>
-        <p>My background in <strong>Business Administration, HR Psychology, and Data Analytics</strong> gives me a
+            make better choices. <span class="codigo">&lt;/p&gt;</span></p>
+        <p><span class="codigo">&lt;p&gt;</span> My background in <strong>Business Administration, HR Psychology, and Data Analytics</strong> gives me a
             unique edge in bridging the gap between technology and business needs. By combining these disciplines, I
             create efficient, data-driven solutions that not only optimize processes but also empower companies to make
-            informed, strategic decisions.</p>
-        <p>Currently, I’m focused on developing solutions that simplify data interpretation, making complex information
+            informed, strategic decisions. <span class="codigo">&lt;/p&gt;</span></p>
+        <p><span class="codigo">&lt;p&gt;</span> Currently, I’m focused on developing solutions that simplify data interpretation, making complex information
             accessible and actionable. Whether it's through automation, reporting tools, or interactive dashboards, my
-            goal is to enhance decision-making through technology.</p>
+            goal is to enhance decision-making through technology. <span class="codigo">&lt;/p&gt;</span></p>
         <p><cite>Always exploring new technologies, always improving </cite>🚀</p>
 
     </div>
