--- a/index.html
+++ b/index.html
@@ -8,50 +8,57 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <!--Estas dos lineas de abajo son copia y pega de google fonts para descargar la tipologia de letra que queremos-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inspiration&family=Overpass+Mono:wght@300..700&family=Syne+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css"/>
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inspiration&family=Overpass+Mono:wght@300..700&family=Syne+Mono&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+    <title>Portfolio Pau Dura</title>
 </head>
 
 <body>
     <!--Bloque de inicio-->
-    <div id="sobremi">
-        <h1><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span></h1>
-        <h3 class="hastag">#Programmer</h3>
-        <h3 class="hastag">#Work Force Manager</h3>
-        <h3 class="hastag">#Business Administration</h3>s
-        <h3 class="hastag">#Human Resources Psicology</h3>
+    <div>
+        <h1 id="sobremi"><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span></h1>
+        <div class="hastags-container">
+            <h3 class="hastag">#WorkForceManager</h3>
+            <h3 class="hastag">#BusinessAdministration</h3>
+            <h3 class="hastag">#Programmer</h3>
+        </div>
     </div>
 
     <!--Bloque Sobre mi-->
     <div>
-        <h2>Mi primer porftolio</h2>
+        <h2>About me</h2>
         <img src="/images/profile.png" alt="imagen de perfil" height="200">
-        <p> <span class="codigo">&lt;p&gt;</span> Hey there! 👋 I’m a <strong>Multi-Platform Application Developer</strong> with a strong passion for
+        <p> <span class="codigo">&lt;p&gt;</span> Hey there! 👋 I’m a <strong>Multi-Platform Application
+                Developer</strong> with a strong passion for
             transforming raw data into meaningful insights. I believe that data is the foundation of smart
             decision-making, and I love building tools that help businesses analyze and understand their information to
             make better choices. <span class="codigo">&lt;/p&gt;</span></p>
-        <p><span class="codigo">&lt;p&gt;</span> My background in <strong>Business Administration, HR Psychology, and Data Analytics</strong> gives me a
+        <p><span class="codigo">&lt;p&gt;</span> My background in <strong>Business Administration, HR Psychology, and
+                Data Analytics</strong> gives me a
             unique edge in bridging the gap between technology and business needs. By combining these disciplines, I
             create efficient, data-driven solutions that not only optimize processes but also empower companies to make
             informed, strategic decisions. <span class="codigo">&lt;/p&gt;</span></p>
-        <p><span class="codigo">&lt;p&gt;</span> Currently, I’m focused on developing solutions that simplify data interpretation, making complex information
+        <p><span class="codigo">&lt;p&gt;</span> Currently, I’m focused on developing solutions that simplify data
+            interpretation, making complex information
             accessible and actionable. Whether it's through automation, reporting tools, or interactive dashboards, my
             goal is to enhance decision-making through technology. <span class="codigo">&lt;/p&gt;</span></p>
-        <p><cite>Always exploring new technologies, always improving </cite>🚀</p>
+        <p id="cita"><span class="codigo">&lt;p&gt;</span><cite>Always exploring new technologies, always improving
+            </cite>🚀<span class="codigo">&lt;/p&gt;</span></p>
 
     </div>
 
     <!--Bloque de Porfolio-->
     <div>
         <h2>Portfolio</h2>
-        <h3>Latest projects</h3>
+        <h3>Looker Studio Code</h3>
         <table>
             <thead>
                 <tr>
                     <th colspan="1">Examples</th>
-                
+
                 </tr>
             </thead>
 
@@ -71,8 +78,26 @@
                 </tr>
             </tbody>
         </table>
+
+        <h3>Codes</h3>
     </div>
 
+    <!--Bloque de Experience-->
+    <div>
+        <h2>Experience</h2>
+
+
+
+    </div>
+
+    <!--Bloque Iconos Social Media-->
+    <div>
+        <h2>Social Media</h2>
+        <ul id="listaRedesSociales">
+            <li> <a href="https://www.linkedin.com/in/pau-dur%C3%A0-9a1376a5/" target="_blank"><img src="/images/logo_linkedin.png" alt="perfilLinkedin" height="30"> Find the complet cv in my Linkedin profile</a> </li>
+            <li><a href="https://github.com/Paupaauu" target="_blank"><img src="/images/logo_github.png" alt="perfilLinkedin" height="30">Some public codes to check my work</a></li>
+        </ul>
+    </div>
 </body>
 
 </html>
