--- a/index.html
+++ b/index.html
@@ -17,87 +17,131 @@
 </head>
 
 <body>
-    <!--Bloque de inicio-->
-    <div>
-        <h1 id="sobremi"><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span></h1>
-        <div class="hastags-container">
+
+    <!--Cabecera-->
+    <header>
+        <h1 id="nombrecabezera"><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span>
+        </h1>
+        <section class="hastags-container">
             <h3 class="hastag">#WorkForceManager</h3>
             <h3 class="hastag">#BusinessAdministration</h3>
             <h3 class="hastag">#Programmer</h3>
-        </div>
+        </section>
+    </header>
+
+    <!-- Contenedor que agrupa nav y main -->
+    <div class="contenedor-principal">
+        <!--Menu de navegacion-->
+
+        <nav>
+            <ul>
+                <li> <a href="#aboutme">About me</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#socialmedia">Social Media</a></li>
+                <li><a href="#contactme">Contact Me</a></li>
+            </ul>
+
+        </nav>
+        <main> <!--Bloque Principal con Main-->
+            <!--Bloque Sobre mi-->
+            <section id="aboutme">
+                <h2>About me</h2>
+                <img src="/images/profile.png" alt="imagen de perfil" height="200">
+                <p> <span class="codigo">&lt;p&gt;</span> Hey there! 👋 I’m a <strong>Multi-Platform Application
+                        Developer</strong> with a strong passion for
+                    transforming raw data into meaningful insights. I believe that data is the foundation of smart
+                    decision-making, and I love building tools that help businesses analyze and understand their
+                    information
+                    to
+                    make better choices. <span class="codigo">&lt;/p&gt;</span></p>
+                <p><span class="codigo">&lt;p&gt;</span> My background in <strong>Business Administration, HR
+                        Psychology,
+                        and
+                        Data Analytics</strong> gives me a
+                    unique edge in bridging the gap between technology and business needs. By combining these
+                    disciplines, I
+                    create efficient, data-driven solutions that not only optimize processes but also empower companies
+                    to
+                    make
+                    informed, strategic decisions. <span class="codigo">&lt;/p&gt;</span></p>
+                <p><span class="codigo">&lt;p&gt;</span> Currently, I’m focused on developing solutions that simplify
+                    data
+                    interpretation, making complex information
+                    accessible and actionable. Whether it's through automation, reporting tools, or interactive
+                    dashboards,
+                    my
+                    goal is to enhance decision-making through technology. <span class="codigo">&lt;/p&gt;</span></p>
+                <p id="cita"><span class="codigo">&lt;p&gt;</span><cite>Always exploring new technologies, always
+                        improving
+                    </cite>🚀<span class="codigo">&lt;/p&gt;</span></p>
+
+            </section>
+
+            <!--Bloque de Porfolio-->
+            <section id="portfolio">
+                <h2>Portfolio</h2>
+                <h3>Looker Studio Code</h3>
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="1">Examples</th>
+
+                        </tr>
+                    </thead>
+
+                    <tbody>
+                        <tr>
+                            <td>Developer</td>
+                            <td>Data Analyst</td>
+                            <td>Looker Studio</td>
+                            <td>Excel pro</td>
+                        </tr>
+                        <tr>
+                            <td>Ejemplo 5</td>
+                            <td>Ejemplo 6</td>
+                            <td>Ejemplo 7</td>
+                            <td>Ejemplo 8</td>
+
+                        </tr>
+                    </tbody>
+                </table>
+
+                <h3>Codes</h3>
+            </section>
+
+            <!--Bloque de Experience-->
+            <section id="experience">
+                <h2>Experience</h2>
+
+
+
+            </section>
+
+            <!--Bloque Iconos Social Media-->
+            <section id="socialmedia">
+                <h2>Social Media</h2>
+                <ul id="listaRedesSociales">
+                    <li> <a href="https://www.linkedin.com/in/pau-dur%C3%A0-9a1376a5/" target="_blank"><img
+                                src="/images/logo_linkedin.png" alt="perfilLinkedin" height="30"> Find the complet cv in
+                            my
+                            Linkedin profile</a> </li>
+                    <li><a href="https://github.com/Paupaauu" target="_blank"><img src="/images/logo_github.png"
+                                alt="perfilLinkedin" height="30">Some public codes to check my work</a></li>
+                </ul>
+            </section>
+
+            <!--Bloque Contact Me-->
+            <section id="contactme">
+                <h2>Contact Me</h2>
+            </section>
+
+        </main>
     </div>
+    <!--Footer-->
+    <footer>
 
-    <!--Bloque Sobre mi-->
-    <div>
-        <h2>About me</h2>
-        <img src="/images/profile.png" alt="imagen de perfil" height="200">
-        <p> <span class="codigo">&lt;p&gt;</span> Hey there! 👋 I’m a <strong>Multi-Platform Application
-                Developer</strong> with a strong passion for
-            transforming raw data into meaningful insights. I believe that data is the foundation of smart
-            decision-making, and I love building tools that help businesses analyze and understand their information to
-            make better choices. <span class="codigo">&lt;/p&gt;</span></p>
-        <p><span class="codigo">&lt;p&gt;</span> My background in <strong>Business Administration, HR Psychology, and
-                Data Analytics</strong> gives me a
-            unique edge in bridging the gap between technology and business needs. By combining these disciplines, I
-            create efficient, data-driven solutions that not only optimize processes but also empower companies to make
-            informed, strategic decisions. <span class="codigo">&lt;/p&gt;</span></p>
-        <p><span class="codigo">&lt;p&gt;</span> Currently, I’m focused on developing solutions that simplify data
-            interpretation, making complex information
-            accessible and actionable. Whether it's through automation, reporting tools, or interactive dashboards, my
-            goal is to enhance decision-making through technology. <span class="codigo">&lt;/p&gt;</span></p>
-        <p id="cita"><span class="codigo">&lt;p&gt;</span><cite>Always exploring new technologies, always improving
-            </cite>🚀<span class="codigo">&lt;/p&gt;</span></p>
-
-    </div>
-
-    <!--Bloque de Porfolio-->
-    <div>
-        <h2>Portfolio</h2>
-        <h3>Looker Studio Code</h3>
-        <table>
-            <thead>
-                <tr>
-                    <th colspan="1">Examples</th>
-
-                </tr>
-            </thead>
-
-            <tbody>
-                <tr>
-                    <td>Developer</td>
-                    <td>Data Analyst</td>
-                    <td>Looker Studio</td>
-                    <td>Excel pro</td>
-                </tr>
-                <tr>
-                    <td>Ejemplo 5</td>
-                    <td>Ejemplo 6</td>
-                    <td>Ejemplo 7</td>
-                    <td>Ejemplo 8</td>
-
-                </tr>
-            </tbody>
-        </table>
-
-        <h3>Codes</h3>
-    </div>
-
-    <!--Bloque de Experience-->
-    <div>
-        <h2>Experience</h2>
-
-
-
-    </div>
-
-    <!--Bloque Iconos Social Media-->
-    <div>
-        <h2>Social Media</h2>
-        <ul id="listaRedesSociales">
-            <li> <a href="https://www.linkedin.com/in/pau-dur%C3%A0-9a1376a5/" target="_blank"><img src="/images/logo_linkedin.png" alt="perfilLinkedin" height="30"> Find the complet cv in my Linkedin profile</a> </li>
-            <li><a href="https://github.com/Paupaauu" target="_blank"><img src="/images/logo_github.png" alt="perfilLinkedin" height="30">Some public codes to check my work</a></li>
-        </ul>
-    </div>
+    </footer>
 </body>
 
 </html>
