Functional Version-missing cover

--- a/index.html
+++ b/index.html
@@ -18,19 +18,18 @@
 
 <body>
 
-    <!--Cabecera-->
-    <header>
-        <h1 id="nombrecabezera"><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span>
-        </h1>
-        <section class="hastags-container">
-            <h3 class="hastag">#WorkForceManager</h3>
-            <h3 class="hastag">#BusinessAdministration</h3>
-            <h3 class="hastag">#Programmer</h3>
-        </section>
-    </header>
+        <!--Cabecera-->
+        <header>
+            <h1><span class="codigo">&lt;h1&gt;</span> Pau Durà <span
+                    class="codigo">&lt;/h1&gt;</span>
+            </h1>
+            <section class="hastags-container">
+                <h3 class="hastag">#WorkForceManager</h3>
+                <h3 class="hastag">#BusinessAdministration</h3>
+                <h3 class="hastag">#Programmer</h3>
+            </section>
+        </header>
 
-    <!-- Contenedor que agrupa nav y main -->
-    <div class="contenedor-principal">
         <!--Menu de navegacion-->
 
         <nav>
@@ -44,10 +43,14 @@
 
         </nav>
         <main> <!--Bloque Principal con Main-->
+            <!--Portada-->
+            <section id="portada">
+
+            </section>
+
             <!--Bloque Sobre mi-->
             <section id="aboutme">
                 <h2>About me</h2>
-                <img src="/images/profile.png" alt="imagen de perfil" height="200">
                 <p> <span class="codigo">&lt;p&gt;</span> Hey there! 👋 I’m a <strong>Multi-Platform Application
                         Developer</strong> with a strong passion for
                     transforming raw data into meaningful insights. I believe that data is the foundation of smart
@@ -137,11 +140,12 @@
             </section>
 
         </main>
-    </div>
-    <!--Footer-->
-    <footer>
 
-    </footer>
+        <!--Footer-->
+        <footer>
+            <p>footer</p>
+        </footer>
+ 
 </body>
 
 </html>
