--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
         <!--Cabecera-->
         <header>
-            <h1><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span> </h1>
+            <a href="#portada"><h1><span class="codigo">&lt;h1&gt;</span> Pau Durà <span class="codigo">&lt;/h1&gt;</span> </h1></a> 
             <section class="hastags-container">
                 <h3 class="hastag">#WorkForceManager</h3>
                 <h3 class="hastag">#BusinessAdministration</h3>
@@ -43,7 +43,7 @@
         <main> <!--Bloque Principal con Main-->
             <!--Portada-->
             <section id="portada">
-
+                
             </section>
 
             <!--Bloque Sobre mi-->
